--- a/Groovy学习/语法规范/语法.md
+++ b/Groovy学习/语法规范/语法.md
@@ -765,6 +765,8 @@ Groovy支持创建多维数组:
 	Integer[][] matrix2                     
 	matrix2 = [[1, 2], [3, 4]]
 	assert matrix2 instanceof Integer[][]
+	
+- **允许定义数组的边界，也允许不定义数组的边界**	
 
 **对数组元素的访问遵循与列表相同的表示法:**
 
@@ -816,7 +818,7 @@ Groovy不仅支持字符串作为键，还支持其他类型作为键:
 	
 ## 9.1 变量作为键时的特殊情况
 
-如果想要传递一个变量来作为键，那么该变量本身会成为键，而不是该变量的值作为键
+如果想要传递一个变量来作为键，那么该变量本身会转换为字符串并被作为键使用，而不是该变量对应的值作为键
 
 	def key = 'name'
 	def person = [key: 'Guillaume']
@@ -829,7 +831,7 @@ Groovy不仅支持字符串作为键，还支持其他类型作为键:
 Groovy支持使用带引号的字符串作为键，如果需要使用无效的关键字作为标识符，那么必须使用带引号形式的字符串作为键
 
 	def m = ["street-name": "Main street"]	
-当需要强制使用变量作的值为`Map`的键，则可以通过 用圆括号将变量或表达式括起来来实现
+**当需要强制使用变量的值为`Map`的键，则可以通过 用圆括号将变量或表达式括起来来实现**
 	
 	person = [(key): 'Guillaume']        
 	
